--- a/Assets/style.css
+++ b/Assets/style.css
@@ -18,7 +18,6 @@ body {
 
 .hover-text:hover {
     cursor: pointer;
-    margin-right: 80%;
     transform: translateY(-3px);
     text-decoration: underline;
 }
@@ -30,6 +29,7 @@ body {
 
 /* nav el */
 nav {
+    display: flex;
     background-color: var(--light);
     color: var(--text-dark);
     justify-content: space-between;
@@ -104,6 +104,11 @@ main {
     border-radius: 8px;
 }
 
+#question-container {
+    margin: 20px;
+    padding: 20px;
+}
+
 #choices {
     display: flex;
     flex-direction: column;
@@ -111,10 +116,10 @@ main {
 }
 
 .feedback {
-    display: flex;
+    font-size: 34px;
     justify-content: center;
     align-items: center;
-    font-size: 24px;
+
 }
 
 .result {
@@ -136,10 +141,16 @@ main {
     display: none;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
     nav {
         display: flex;
-        flex-wrap: wrap;
+        flex-direction: column;
 
+    }
+
+    .hover-text {
+        display: flex;
+        flex-direction: column;
+        max-width: 50%;
     }
 }
