--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,3 +1,4 @@
+/* Universal selectors */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -16,6 +17,7 @@ body {
     --btn: rgb(238, 199, 250);
 }
 
+/* Hover transformations */
 .hover-text:hover {
     cursor: pointer;
     transform: translateY(-3px);
@@ -114,7 +116,7 @@ main {
     flex-direction: column;
     padding: 20px;
 }
-
+/* dynamic feedback for answers*/
 .feedback {
     margin: auto;
     font-size: 34px;
@@ -130,7 +132,7 @@ main {
 .correct {
     color: green;
 }
-
+/* final score */
 .result {
     display: flex;
     flex-direction: column;
@@ -145,11 +147,11 @@ main {
     font-size: 24px;
     color: var(--text-dark);
 }
-
+/* allows me to remove elements from view*/
 .hide {
     display: none;
 }
-
+/* helps make page responsive to smaller devices */
 @media screen and (max-width: 900px) {
     nav {
         display: flex;
